# chatbot

./: .gitignore  Cargo.toml  README.md  config.toml  custom_api_keys.toml  database.sql  run and register.bat  run.bat  schema.db  system_messages.toml
migrations/: 1_init.sql  2_add_guild_and_channel.sql
src/: allowances.rs  chatgpt.rs  config.rs  conversations.rs  discord_client.rs  gpt.rs  main.rs  one_off_response.rs  response_styles.rs  user_settings.rs  util.rs
